package semantikCheck;

public class Field {
}
