package semantikCheck;

public class Method {
}
