package semantikCheck.expr;

public class BoolLit {
}
