package semantikCheck.expr;

public class CharLit {
}
