package semantikCheck.expr;

public class IntegerLit {
}
