package semantikCheck.expr;

import semantikCheck.interfaces.IExpr;

public class LeftSideExpr {

    public IExpr expression;

    public LeftSideExpr(IExpr expression) {
        this.expression = expression;
    }
}
