package semantikCheck.expr;

public class StringLit {
}
