package semantikCheck.expr;

public class Unary {
}
