package semantikCheck.interfaces;

public interface IExpr {

}
