package semantikCheck.interfaces;

public interface IStmtExpr {
}
