package semantikCheck.stmt;

public class TypedStmt {
}
