package semantikCheck.stmtexpr;

public class MethodCall {
}
