package semantikCheck.stmtexpr;

public class New {
}
